--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -16,6 +16,15 @@
    "source": [
     "print(\"Hello! Jupyter notebook!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import psycopg2"
+   ]
   }
  ],
  "metadata": {
