--- a/lesson5/lesson5_2.ipynb
+++ b/lesson5/lesson5_2.ipynb
@@ -19,11 +19,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('PostgreSQL 15.8 (Debian 15.8-0+deb12u1) on aarch64-unknown-linux-gnu, compiled by gcc (Debian 12.2.0-14) 12.2.0, 64-bit',)\n"
+     ]
+    }
+   ],
    "source": [
-    "import psycopg2"
+    "import psycopg2\n",
+    "\n",
+    "connection = psycopg2.connect(host='192.168.0.252',database='mydatabase_a20',user='a20',password='raspberry')\n",
+    "cursor = connection.cursor()\n",
+    "cursor.execute(\"SELECT version();\")\n",
+    "db_version = cursor.fetchone()\n",
+    "print(db_version)\n",
+    "cursor.close()\n",
+    "connection.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('PostgreSQL 16.3 (Debian 16.3-1.pgdg120+1) on x86_64-pc-linux-gnu, compiled by gcc (Debian 12.2.0-14) 12.2.0, 64-bit',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "connection = psycopg2.connect(host='dpg-crnsm7aj1k6c739c2vc0-a.singapore-postgres.render.com',database='robertchung',user='robertchung_user',password='BzZbU1XXhRgjfR39n1sNjPjR5ZYZX7Vt')\n",
+    "cursor = connection.cursor()\n",
+    "cursor.execute(\"SELECT version();\")\n",
+    "db_version = cursor.fetchone()\n",
+    "print(db_version)\n",
+    "cursor.close()\n",
+    "connection.close()"
    ]
   }
  ],
