--- a/lesson6/lesson7_3.ipynb
+++ b/lesson6/lesson7_3.ipynb
@@ -2,16 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6703"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import psycopg2\n",
     "from dotenv import load_dotenv\n",
     "import os\n",
     "load_dotenv()\n",
     "\n",
-    "conn = psycopg2.connect(host=os.environ['HOST'],database=os.environ['DATABASE'],user=os.environ['USER'],password=os.environ['PASSWORD'])"
+    "conn = psycopg2.connect(host=os.environ['HOST'],database=os.environ['DATABASE'],user=os.environ['USER'],password=os.environ['PASSWORD'])\n",
+    "with conn:\n",
+    "    with conn.cursor() as cursor:\n",
+    "        sql='''SELECT country,a_market,date,adj_close,volume\n",
+    "        FROM a_stock JOIN a_market ON a_stock.name = a_market.name\n",
+    "        WHERE country = '台灣';'''\n",
+    "        cursor.execute(sql)\n",
+    "        all_data = cursor.fetchall()\n",
+    "conn.close()\n",
+    "len(all_data)"
    ]
   }
  ],
