--- a/lesson6/lesson7_1.ipynb
+++ b/lesson6/lesson7_1.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "import psycopg2\n",
     "\n",
-    "conn = psycopg2.connect(host='piRobert0301.local',database='mydatabase_a20',user='a20',password='raspberry')"
+    "conn = psycopg2.connect(host='dpg-cshkcle8ii6s73bgemc0-a.singapore-postgres.render.com',database='render_robertchung',user='render_robertchung_user',password='yxROCQRGyM2EEyuq0UJgGE0hif7EIWua')"
    ]
   },
   {
